--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <!-- Base Path -->
   <base href="/">
   <!-- Favicon -->
-  <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
 
   <!--Google fonts-->
   <link href="https://fonts.googleapis.com/css?family=Questrial&display=swap" rel="stylesheet">
